@@ -3,7 +3,7 @@ Changes in version 1.10.0
 
     o New normal database format
     o Runtime performance improvements (skip unlikely local optima, support for
-      BiocParallel in runAbsoluteCN)
+      BiocParallel in runAbsoluteCN, pre-calculation of mapping bias)
     o Support for replication timing scores in coverage normalization
     o More accurate confidence intervals in callMutationBurden
     o More accurate copy numbers for high-level amplifications
@@ -14,6 +14,10 @@ Changes in version 1.10.0
     o More checks for wrong or sub-optimal input and providing suggestions for
       fixing those issues
     o Gibbs sampling of log tumor/normal coverage error rate
+    o Better imputation of mapping bias (instead of smoothing
+      over neighboring variants in the sample, smooth over neighboring SNPs
+      in the pool of normals - only available when pre-calculated)
+    o Better support for GATK4 (still experimental)
     o Code cleanups (switch to testthat, removed several obsolete and minor 
       features)
     
